feat: Introduce RouteShaper branding and theme
Refactors the application's visual identity by updating the title to "RouteShaper" and applying a new dark theme with Tailwind CSS. Introduces 'Inter' font for improved typography and defines color variables for consistency.

The `App.tsx` file is updated to manage a new `creativity` state and rename `isLoading` to `loadingMessage` to provide more context during route generation. The minimum drawing complexity is also increased.

The `types.ts` file now includes the `CreativityLevel` type definition.

The `geminiService.ts` file is updated to incorporate the `creativity` parameter into the prompt and refine the `similarityScore` description to be more accurate. It also prepares for future shape analysis features.

The `ControlPanel.tsx` component is enhanced with new sections for creativity level selection and includes new icons for transportation modes and creativity levels. It also introduces `Header`, `EmptyState`, and `LoadingIndicator` components for a better user experience.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shape to Route</title>
+    <title>RouteShaper</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
       integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
       crossorigin=""/>
@@ -13,10 +15,41 @@
       integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
       crossorigin=""></script>
     <style>
+      :root {
+        --bg-primary: #111827; /* gray-900 */
+        --bg-secondary: #1F2937; /* gray-800 */
+        --bg-tertiary: #374151; /* gray-700 */
+        --border-primary: #4B5563; /* gray-600 */
+        --text-primary: #F9FAFB; /* gray-50 */
+        --text-secondary: #9CA3AF; /* gray-400 */
+        --accent: #22D3EE; /* cyan-400 */
+        --accent-dark: #0E7490; /* cyan-700 */
+        --accent-light: #67E8F9; /* cyan-300 */
+      }
+      body {
+        font-family: 'Inter', sans-serif;
+        background-color: var(--bg-primary);
+        color: var(--text-primary);
+      }
       /* Ensure leaflet map renders correctly */
       .leaflet-container {
         height: 100%;
         width: 100%;
+        background-color: var(--bg-primary);
+      }
+      /* Custom scrollbar */
+      ::-webkit-scrollbar {
+        width: 8px;
+      }
+      ::-webkit-scrollbar-track {
+        background: var(--bg-secondary);
+      }
+      ::-webkit-scrollbar-thumb {
+        background: var(--bg-tertiary);
+        border-radius: 4px;
+      }
+      ::-webkit-scrollbar-thumb:hover {
+        background: var(--border-primary);
       }
     </style>
   <script type="importmap">
